--- a/DiceRoller/app/src/main/res/values/strings.xml
+++ b/DiceRoller/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Dice Roller</string>
     <string name="roll_label">Roll</string>
     <string name="count_label">Count</string>
+    <string name="clear_label">Clear</string>
 </resources>
