Added interactivity to about me app

--- a/AboutMe/app/src/main/res/values/strings.xml
+++ b/AboutMe/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="name">Johnny Leek</string>
     <string name="yellow_star">Yellow Star</string>
     <string name="bio">This is my biography!\n\n I\'m a 19 year old computer science student, excited to be learning <b>android development</b> using <i>kotlin</i> and <u>android studio</u>\n\nAs we get further down, hopefully things should start to scroll so that you can read the entire message. I hope it works!\n\n\n\n\n(if you\'re seeing this then it definitely worked)\n</string>
+    <string name="what_is_your_nickname">What is your Nickname?</string>
+    <string name="done">Done</string>
 </resources>
